# systemInventory

./: .gitignore  Makefile  README.md  system.db
include/: common.h  file.h  sysmodel.h
src/: CMakeLists.txt  common.c  common.h  file.c  file.h  linked_list.c  linked_list.h  main.c  munit.c  munit.h  parse.c  parse.h  sysmodel.c  sysmodel.h  tests.c
